--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-setuptools~=41.6.0
+setuptools~=46.1.3
 pyyaml~=5.3.1
 pytest~=5.4.1
-coverage~=5.0.4
+coverage~=5.1
+bump2version~=1.0.0
+wheel~=0.34.2
+twine~=3.1.1
